fix: 🐛 z-index

--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.less
@@ -66,7 +66,7 @@
 		&-ui {
 			&-toolbar {
 				> .oo-ui-toolbar-bar {
-					z-index: @z-index-site-header;
+					z-index: 91; // @z-index-site-header - 1
 					border-color: var( --border-color-base--darker );
 					background-color: var( --color-surface-0 );
 
